# PP_bigram_omp

./: CMakeLists.txt  README.md  corpus.txt  main.cpp
include/: matplotlibcpp.h
